[package]
name = "cargo-src"
version = "0.1.8"
authors = ["Nick Cameron <nrc@ncameron.com>"]
repository = "https://github.com/nrc/cargo-src"
readme = "README.md"
license = "Apache-2.0/MIT"
build = "build.rs"
categories = ["development-tools"]
description = "Semantic code navigation for Rust"

[[bin]]
name = "cargo-src"

[dependencies]
cargo_metadata = "0.6.4"
url = "2.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.4"
rls-analysis = "0.13"
rls-blacklist = "0.1.2"
rls-span = "0.4"
rls-vfs = "0.4"
log = "0.3"
env_logger = "0.3"
rustdoc-highlight = "0.1.10"
futures = "0.1.14"
hyper="0.11"
comrak="0.2.13"

[build-dependencies]
walkdir = "2"
